--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/* index.css */
+@import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700;800;900&display=swap');
+
+html,
+body {
+    margin: 0;
+    padding: 0;
+}
